# scripts

./: .gitignore  act_cumsum_scale_fused_v2.py  cutile_vs_torch_vs_triton.py  fused_gdn.py  gdn.py  mma_tf32_16x16.py  mma_tf32_ldmatrix.py  new_gdn.py  simple_atomic_ipc.cu  simple_data_move.cu  simple_data_move_tma.cu  simple_data_move_warp.cu  simple_data_move_warp_multi_dest.cu  simple_falshinfer.py  solve_tril_cute.py  solve_tril_cute_v2.py  test_tril_precision.py
gdn/: benchmark_gdn_cutile_vs_fla.py  fused_gdn.py  gdn.py  test_gdn_precision.py
kda_optimized/: README.md  __init__.py  act_cumsum_scale_fused.py  cumsum_fused.py  cutile_kernel.py  forward.py  inter_solve.py  intra_parallel.py  kda_opt_profile.nsys-rep  run_profile.py  test.py
mygtx/: CMakeLists.txt  build.sh  example.py  gtx.cpp  gtx.h  hybrid.py  quick_sm_test.py  test_green_context.py
semi-pd/: README.md  build_library.sh  decode.py  gemm.py  green_context_wrapper.cu  hybrid.py  hybrid_decode_gemm.py  hybrid_prefill_compute.py  hybrid_prefill_tma.py  hybrid_process.nsys-rep  hybrid_process_136_48.nsys-rep  prefill.py  prefill_tma.ncu-rep  quick_sm_test.py  setup.py  simple_flashinfer.py  simple_tma_test.py  test_compute_intensive.py
semi-pd/green_context_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
